<resources>
    <string name="app_name">DeliveryHelper</string>
    <string name="add_location">Add Location</string>
    <string name="sort_open_locations">Sort Open Locations</string>
    <string name="add_route">Add Route</string>
    <string name="name_colon">Name:</string>
    <string name="address_colon">Address:</string>
    <string name="search">Search</string>
    <string name="price_colon">Price:</string>
    <string name="notes_colon">Notes:</string>
    <string name="date_colon">Date:</string>
    <string name="placeholder_date" translatable="false"><![CDATA[<Date>]]></string>
    <string name="placeholder_section" translatable="false"><![CDATA[<Section>]]></string>
    <string name="placeholder_name" translatable="false"><![CDATA[<Name>]]></string>
    <string name="placeholder_address" translatable="false"><![CDATA[<Address>]]></string>
    <string name="placeholder_notes" translatable="false"><![CDATA[<Notes>]]></string>
    <string name="placeholder_price" translatable="false"><![CDATA[<Price>]]></string>
    <string name="placeholder_routename" translatable="false"><![CDATA[<RouteName>]]></string>
    <string name="placeholder_number_open" translatable="false"><![CDATA[<#O>]]></string>
    <string name="placeholder_number_delivered" translatable="false"><![CDATA[<#D>]]></string>
    <string name="placeholder_total_price" translatable="false"><![CDATA[<Total€>]]></string>
    <string name="remove_route">Remove Route</string>
    <string name="edit_route">Edit Route</string>
    <string name="open_amount_format_template">Open: %d</string>
    <string name="delivered_amount_format_template">Delivered: %d</string>
    <string name="routes">Routes</string>
    <string name="locations">Locations</string>
    <string name="edit_location">Edit Location</string>
    <string name="no_name_or_addess_toast">No \'Name\' or \'Address\' given. Press BACK again to exit anyway.</string>
    <string name="no_note_available">No Note available.</string>
    <string name="no_name_toast">No \'Name\' given. Press BACK again to exit anyway.</string>
    <string name="placeholder_emptynote" translatable="false"><![CDATA[<EmptyNote>]]></string>
    <string name="open">Open</string>
    <string name="no_open_locations">No open locations.</string>
    <string name="delivered">Delivered</string>
    <string name="no_delivered_locations">No delivered locations.</string>
    <string name="no_routes_existing">No Route existing.</string>
    <string name="show_map">Show Map</string>
    <string name="no_route_found">No Route Found!</string>
    <string name="delete_q">Delete?</string>
    <string name="do_you_want_to_delete">Do you want to Delete</string>
    <string name="delete_button">Delete</string>
    <string name="cancel_button">Cancel</string>
    <string name="failed_to_connect">Failed to connect to Google services.</string>
    <string name="failed_retrieve_route">Failed to retrieve route information.</string>
    <string name="autosort_open_locations_by_route">Autosort Open Locations by Route</string>
    <string name="settings">Settings</string>
    <string name="remote_access">Remote Access</string>
    <string name="ok_button">OK</string>
    <string name="remote_access_port">Remote Access Port</string>
    <string name="sort_open_locations_by_route">Sort Open Locations by Route</string>
    <string name="sort_open_locations_alphabetical">Sort Open Locations Alphabetical</string>
</resources>
