<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_locations_map"
        android:icon="@drawable/ic_map"
        android:title="@string/show_map"
        android:onClick="mapLocationsOnClick"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_locations_sort_route"
        android:icon="@drawable/ic_menu_sort_route"
        android:title="@string/sort_open_locations_by_route"
        android:onClick="sortLocationsByRouteOnClick"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_locations_sort_alphabetical"
        android:icon="@drawable/ic_menu_sort_alphabetical"
        android:title="@string/sort_open_locations_alphabetical"
        android:onClick="sortLocationsAlphabeticalOnClick"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_location_add"
        android:icon="@drawable/ic_menu_add"
        android:title="@string/add_location"
        android:onClick="addLocationOnClick"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_location_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        android:onClick="openSettingsOnClick"
        app:showAsAction="ifRoom"/>
</menu>